# holodeck

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
crates/holodeck-client-native/: Cargo.toml
crates/holodeck-client-native/src/: main.rs  native.rs
crates/holodeck-client-wasm/: Cargo.toml  Makefile  index.html  index.js  webpack.config.js  worker.js
crates/holodeck-client-wasm/.cargo/: config
crates/holodeck-client-wasm/src/: lib.rs  wasm.rs
crates/holodeck-core/: Cargo.toml
crates/holodeck-core/src/: lib.rs
crates/holodeck-macros/: Cargo.toml
crates/holodeck-macros/src/: call_once.rs  context.rs  holodeck.rs  internals.rs  lib.rs
crates/holodeck-net/: Cargo.toml
crates/holodeck-net/src/: channel.rs  lib.rs  macros.rs  message.rs  protocol.rs  server.rs  utils.rs
crates/holodeck-server/: Cargo.toml
crates/holodeck-server/src/: devserver.rs  main.rs
crates/holodeck-simulation/: Cargo.toml
crates/holodeck-viewer/: Cargo.toml
crates/holodeck-viewer/src/: app.rs  buildmeta.rs  config.rs  engine.rs  geometry.rs  lib.rs  material.rs  theme.rs
crates/holodeck-viewer/src/client/: mod.rs  state.rs
crates/holodeck-viewer/src/texture/: mod.rs
crates/holodeck-viewer/src/ui/: draw.rs  hud.rs  info_pane.rs  minimap.rs  mod.rs
crates/holodeck-viewer/src/world/: block.rs  border2.rs  entity.rs  grid.rs  mod.rs  object.rs  plane.rs  player.rs  procedural.rs  quad.rs  shell.rs  skybox.rs  sphere.rs  world.rs  zones.rs
