[package]
name = "holodeck-client-native"
version = "0.0.0-alpha"
authors = ["dillon <dillon@dillonhicks.io>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/dillonhicks/holodeck"
homepage =  "https://github.com/dillonhicks/holodeck"
#documentation = "https://docs.rs/holodeck"

publish = false

[[bin]]
name = "holodeck-client"
path = "src/main.rs"


[features]
default = []


[dependencies]
holodeck-viewer = { path = "../holodeck-viewer" }
holodeck-net = { path = "../holodeck-net" }
holodeck-macros = { path = "../holodeck-macros" }
holodeck-core = { path = "../holodeck-core" }

structopt ="^0.3"
tracing = "^0.1"
tracing-subscriber = "^0.2"
tracing-log = "^0.1"
log = "^0.4"

