[package]
name = "holodeck-core"
version = "0.0.0-alpha"
authors = ["Dillon Hicks <dillon@dillonhicks.io>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/dillonhicks/holodeck"
homepage =  "https://github.com/dillonhicks/holodeck"
#documentation = "https://docs.rs/holodeck"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

bfloat16 = ["half"]
# SimulationState bincode message size with 250 Entities
#   * without feature: bytes=3016
#   * without feature: bytes=2016
serde_f32_as_bfloat16= ["bfloat16"]

[dependencies]
anyhow = "^1.0"
bincode ="^1.3"
serde = {version = "^1.0", features = ["derive"] }
thiserror = "^1.0"
half = {version = "^1.6", features = ["serde"], optional = true}


[target.'cfg(not(target_arch="wasm32"))'.dependencies]
futures = { version = "^0.3" }
futures-util = "^0.3"
tokio = {version = "0.2.0", features = ["full"] }
tungstenite = "^0.10"
tokio-tungstenite = "^0.10"