[package]
name = "holodeck-server"
version = "0.0.0-alpha"
authors = ["Dillon Hicks <dillon@dillonhicks.io>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/dillonhicks/holodeck"
homepage =  "https://github.com/dillonhicks/holodeck"
publish = false


[[bin]]
name = "holodeck-server"
path = "src/main.rs"


[features]
default = ["devserver"]
devserver = ["rand"]

[dependencies]
holodeck-macros = {path ="../holodeck-macros"}
holodeck-core = {path = "../holodeck-core"}
holodeck-net = {path = "../holodeck-net"}

structopt = "0.3"
log = "^0.4"
tokio = { version = "^0.2", features = ["full" ] }
tracing = "^0.1"
tracing-futures = "^0.2"
tracing-subscriber = "^0.2"
tracing-log = "^0.1"

rand = {version = "^0.7", optional=true}
