[package]
name = "holodeck-simulation"
version = "0.0.0-alpha"
authors = ["dillon <dillon@dillonhicks.io>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/dillonhicks/holodeck"
homepage =  "https://github.com/dillonhicks/holodeck"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
